# SmartCFS

./: CMakeLists.txt  SmartSFC.cpp  run.bat  stdafx.cpp  stdafx.h  txt.bat
ThirdPartyLibs/include/CGAL/: Parabola_segment_2.h
ThirdPartyLibs/lib/: CGAL-vc120-mt-4.7.lib  CGAL-vc120-mt-gd-4.7.lib  CGAL_Core-vc120-mt-4.7.lib  CGAL_Core-vc120-mt-gd-4.7.lib  CGAL_ImageIO-vc120-mt-4.7.lib  CGAL_ImageIO-vc120-mt-gd-4.7.lib  Wm5Core.lib  Wm5Imagics.lib  libboost_chrono-vc120-mt-1_59.lib  libboost_date_time-vc120-mt-1_59.lib  libboost_system-vc120-mt-1_59.lib  libboost_thread-vc120-mt-1_59.lib
cfs/: AM.cpp  AM.h  Base.cpp  CFSCNC.cpp  CFSCNC.h  Circuit.h  Constant.h  MathHelper.h  Output.cpp  RoughMachining.cpp  RoughMachining.h  Source.cpp  Strip.h  ToolPathTimeEstimator.cpp  ToolPathTimeEstimator.hpp  Tree.h  Vector2D.cpp  Vector2D.hpp  scallop_path.cpp
cgal/: IO.cpp  IntegralCurvature.cpp  NewtonApple_hull3D.cpp  NewtonApple_hull3D.h  cgalpackage.cpp  cgalpackage.h  clipper.cpp  clipper.hpp  dllmain.cpp  kdtree.cpp  kdtree.h  math.hpp
workspace/: HeadTile.txt  volume_0.cls  volume_1.cls  volume_1_100.cls  volume_1_r100_1.cls  volume_1_r100_2.cls  volume_2_001.cls  volume_2_100_1.cls  volume_3.cls  volume_3_001_1.cls  volume_4.cls  volume_4_0.50.7r0.5.cls  volume_5.cls  volume_5_0.50.70.5.cls  volume_6.cls  volume_6_r0.50.7r0.5.cls  volume_7.cls  volume_7_0.70.70.cls  volume_8.cls  volume_9.cls
workspace/CFS/: layer.gml  mst.gml
workspace/Fig/: maya.mb
workspace/Fig/bunny_volume0/: transform.off  volume.off
workspace/NXUGSIMULATION/: base.cls  base.stl  base_ipw_cavity_mill_copy_1.prt  base_ipw_cavity_mill_copy_1.stl  workspace.lnk
workspace/biama/volume_1_00r1/: cutter_direction.txt  transform.off  volume_1_00r1.cls
workspace/biama/volume_2_001/: cutter_direction.txt  transform.off  volume_2_001.cls
workspace/biama/volume_3_r100/: cutter_direction.txt  transform.off  volume_3_r100.cls
workspace/biama/volume_4_100/: cutter_direction.txt  transform.off
workspace/bunny/: path.ngc
workspace/bunny/volume_1_00r1/: transform.off  volume_1_00r1.cls
workspace/bunny/volume_2_001/: transform.off  volume_2_001.cls
workspace/bunny/volume_3_010/: cutter_direction.txt  transform.off  volume_3_010.cls
workspace/cage/volume_0/: transform.off
workspace/cage/volume_1/: cutter_direction.txt  transform.off
workspace/cage/volume_2/: cutter_direction.txt  transform.off
workspace/cage/volume_3/: cutter_direction.txt  transform.off
workspace/cage/volume_4/: cutter_direction.txt  transform.off
workspace/cage/volume_5/: cutter_direction.txt  transform.off
workspace/cage/volume_6/: cutter_direction.txt  transform.off
workspace/cage/volume_7/: cutter_direction.txt  transform.off
workspace/cage/volume_8/: cutter_direction.txt  transform.off
workspace/cage/volume_9/: cutter_direction.txt  transform.off
workspace/dent/: volume_0_010.cls  volume_0_01r1.cls  volume_1_010.cls  volume_1_01r1.cls  volume_2_010.cls  volume_2_01r1.cls
workspace/dent/volume_0_010/: transform.off
workspace/dent/volume_0_01r1/: transform.off
workspace/dent/volume_1_010/: transform.off
workspace/dent/volume_1_01r1/: transform.off
workspace/dent/volume_2_010/: transform.off
workspace/dent/volume_2_01r1/: cutter_direction.txt  transform.off
workspace/fertility/: path.ngc
workspace/fertility/volume_1_100/: cutter_direction.txt  volume_1_100.cls
workspace/fertility/volume_2_r100_1/: transform.off  volume_2_r100_1.cls
workspace/fertility/volume_2_r100_2/: cutter_direction.txt  transform.off  volume_2_r100_2.cls
workspace/fertility/volume_2_r100_3/: transform.off  volume_2_r100_3.cls
workspace/fertility/volume_3_r0d5_0d7_r0d5/: cutter_direction.txt  transform.off  volume_3_r0d5_0d7_r0d5.cls
workspace/fertility/volume_4_0d7_0_0d7/: cutter_direction.txt  transform.off  volume_4_0d7_0_0d7.cls
workspace/fertility/volume_5_r0d7_0_r0d7/: cutter_direction.txt  transform.off  volume_5_r0d7_0_r0d7.cls
workspace/fertility/volume_6_0d5_0d7_0d5/: transform.off  volume_6_0d5_0d7_0d5.cls
workspace/fertility/volume_7_0_0d7_0d7/: cutter_direction.txt  transform.off  volume_7_0_0d7_0d7.cls
workspace/genus_box/volume_1_100/: cutter_direction.txt  transform.off
workspace/genus_box/volume_2_001/: transform.off
workspace/genus_box/volume_3_r0.50.50.5/: cutter_direction.txt  transform.off
workspace/genus_box/volume_4_0.50.7r0.5/: cutter_direction.txt  transform.off
workspace/genus_box/volume_5_0.50.70.5/: cutter_direction.txt  transform.off
workspace/genus_box/volume_6_r0.50.7r0.5/: cutter_direction.txt  transform.off
workspace/genus_box/volume_7_0.70.70/: cutter_direction.txt  transform.off
workspace/hanger/: cutter_direction.txt  transform.off
workspace/hanger/output/: mesh_slicer.txt  mesh_slicer_removed_offsets.txt  nodes_sequences.txt
workspace/hanger/path/: 2.gml  layer_spiral_845_0.ngc  layer_spiral_855_0.ngc
workspace/hanger/path - Copy/: layer_spiral_100_0.ngc  layer_spiral_109_0.ngc  layer_spiral_116_0.ngc  layer_spiral_130_0.ngc  layer_spiral_142_0.ngc  layer_spiral_143_0.ngc  layer_spiral_144_0.ngc  layer_spiral_147_0.ngc  layer_spiral_158_0.ngc  layer_spiral_161_0.ngc  layer_spiral_163_1.ngc  layer_spiral_168_0.ngc  layer_spiral_169_1.ngc  layer_spiral_170_1.ngc  layer_spiral_172_1.ngc  layer_spiral_177_1.ngc  layer_spiral_178_1.ngc  layer_spiral_183_1.ngc  layer_spiral_184_1.ngc  layer_spiral_186_1.ngc  layer_spiral_187_1.ngc  layer_spiral_189_1.ngc  layer_spiral_190_0.ngc  layer_spiral_194_0.ngc  layer_spiral_195_0.ngc  layer_spiral_199_1.ngc  layer_spiral_208_0.ngc  layer_spiral_210_0.ngc  layer_spiral_220_0.ngc  layer_spiral_223_0.ngc  layer_spiral_22_0.ngc  layer_spiral_246_0.ngc  layer_spiral_258_0.ngc  layer_spiral_259_0.ngc  layer_spiral_267_0.ngc  layer_spiral_268_1.ngc  layer_spiral_270_1.ngc  layer_spiral_280_1.ngc  layer_spiral_284_1.ngc  layer_spiral_288_0.ngc  (+143 more)
workspace/hanger/yuxuan/: layer_spiral_102_0.ngc  layer_spiral_108_0.ngc  (+223 more)
workspace/horse/: volume_2_100_2.cls
workspace/kitten/: path.ngc
workspace/rocker-arm/: path.ngc
(+5034 files in other folders)
